--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-  "name": "merorafael/yii2-monolog",
+  "name": "mero/yii2-monolog",
   "description": "The Monolog integration for the Yii framework.",
   "keywords": ["yii2", "monolog", "logger"],
   "type": "yii2-extension",
-  "license": "BSD-3-Clause",
+  "license": "MIT",
   "support": {
     "issues": "https://github.com/merorafael/yii2-monolog/issues"
   },
@@ -18,11 +18,11 @@
     "monolog/monolog": "^1.20"
   },
   "autoload": {
-    "psr-4": { "yii\\monolog\\": "" }
+    "psr-4": { "Mero\\Yii\\Monolog": "" }
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "2.0.x-dev"
+      "dev-master": "1.0.x-dev"
     }
   }
 }
