--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "monolog/monolog": "^1.20"
   },
   "autoload": {
-    "psr-4": { "Mero\\Monolog\\": "src/Monolog" }
+    "psr-4": { "Mero\\Monolog\\": "src/Mero/Monolog" }
   },
   "extra": {
     "branch-alias": {
