--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~4.5",
-    "phpunit/phpunit-mock-objects": "2.3.0"
+    "phpunit/phpunit-mock-objects": "2.3.0",
+    "yiisoft/yii2-mongodb": "^2.1"
   },
   "suggest": {
     "yiisoft/yii2-mongodb": "Allow sending log messages to a MongoDB server using Yii2 connection"
