--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,10 @@
     "monolog/monolog": "^1.20"
   },
   "require-dev": {
+    "yiisoft/yii2-mongodb": "^2.1",
     "phpunit/phpunit": "~4.5",
     "phpunit/phpunit-mock-objects": "2.3.0",
-    "yiisoft/yii2-mongodb": "^2.1"
+    "satooshi/php-coveralls": "~1.0"
   },
   "suggest": {
     "yiisoft/yii2-mongodb": "Allow sending log messages to a MongoDB server using Yii2 connection"
@@ -48,7 +49,7 @@
   },
   "scripts": {
     "test": [
-      "phpunit"
+      "./vendor/bin/phpunit -c phpunit.xml.dist"
     ]
   }
 }
