--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <phpunit bootstrap="vendor/autoload.php" colors="true">
+    <logging>
+        <log type="coverage-clover" target="build/logs/clover.xml"/>
+    </logging>
     <testsuites>
         <testsuite name="Yii2 Monolog Test Suite">
             <directory>./tests/Mero/Monolog/</directory>
         </testsuite>
     </testsuites>
-
     <filter>
         <whitelist>
             <directory suffix=".php">./src/Mero/Monolog/</directory>
         </whitelist>
     </filter>
-
     <php>
         <ini name="date.timezone" value="America/Sao_Paulo"/>
     </php>
